Fix radec error on bright pixel cat

--- a/dmu19/dmu19_HELP-SPIRE-maps/2_Make_bright_catalogues.ipynb
+++ b/dmu19/dmu19_HELP-SPIRE-maps/2_Make_bright_catalogues.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "similar-kingston",
+   "id": "selective-afternoon",
    "metadata": {},
    "source": [
     "# Make catalogue of sources above limit\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "educated-hundred",
+   "id": "extra-russell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "labeled-piano",
+   "id": "moderate-oasis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cathedral-tension",
+   "id": "bearing-butterfly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spectacular-lloyd",
+   "id": "young-signature",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "other-nancy",
+   "id": "prepared-developer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "insured-squad",
+   "id": "martial-gibraltar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "controlled-absence",
+   "id": "dangerous-massachusetts",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "facial-simpson",
+   "id": "sophisticated-lodging",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pleased-particular",
+   "id": "focal-finnish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,12 +139,12 @@
     "    cat['pixel_y'] = [np.where(labeled_array == i)[1] for i in cat['id']]\n",
     "    cat['pixel_ra'] =[\n",
     "        w.pixel_to_world(\n",
-    "            np.where(labeled_array == i)[0],np.where(labeled_array == i)[1]\n",
+    "            np.where(labeled_array == i)[1],np.where(labeled_array == i)[0]\n",
     "        ).ra.deg \n",
     "        for i in cat['id']]\n",
     "    cat['pixel_dec'] =[\n",
     "        w.pixel_to_world(\n",
-    "            np.where(labeled_array == i)[0],np.where(labeled_array == i)[1]\n",
+    "            np.where(labeled_array == i)[1],np.where(labeled_array == i)[0]\n",
     "        ).dec.deg \n",
     "        for i in cat['id']]\n",
     "    \n",
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "agricultural-corrections",
+   "id": "light-hotel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "golden-pricing",
+   "id": "associate-chorus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
     "            cat[nonObjCols].write(\n",
     "                m.replace('data','data/cats').replace('.fits','_{}_pix_cat.fits').format(limit),\n",
     "                overwrite=True)\n",
-    "            if limit>90:\n",
+    "            if limit<100:\n",
     "                fullCat=vstack([fullCat,cat[nonObjCols]])\n",
     "        except:\n",
     "            print('FAILED:', m, limit)"
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "golden-router",
+   "id": "surgical-conditioning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "august-community",
+   "id": "prepared-combine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,11 +248,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "animated-inspector",
+   "id": "alike-montgomery",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fullCat.write('./figs/fullPixelCat_100mjy.fits',\n",
+    "fullCat.write('./data/cats/fullPixelCat_80mjy.fits',\n",
     "            overwrite=True)"
    ]
   }
