Chaneg VHS radec to deg

--- a/dmu1/dmu1_ml_AKARI-SEP/1.2.1_VISTA-VHS-DR2.ipynb
+++ b/dmu1/dmu1_ml_AKARI-SEP/1.2.1_VISTA-VHS-DR2.ipynb
@@ -121,11 +121,24 @@
     "catalogue = Table.read(\"../../dmu0/dmu0_VISTA-VHS/data/VHS_AKARI-SEP_notCutToHelp.fits.gz\")[list(imported_columns)]\n",
     "for column in imported_columns:\n",
     "    catalogue[column].name = imported_columns[column]\n",
-    "\n",
+    "    #print(type(imported_columns[column]))\n",
+    "catalogue[\"vhs_ra\"].unit = u.rad\n",
+    "catalogue[\"vhs_dec\"].unit = u.rad\n",
+    "catalogue[\"vhs_ra\"]=catalogue[\"vhs_ra\"].to(u.deg)\n",
+    "catalogue[\"vhs_dec\"]=catalogue[\"vhs_dec\"].to(u.deg)   \n",
     "epoch = 2011\n",
     "\n",
     "# Clean table metadata\n",
     "catalogue.meta = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(imported_columns)"
    ]
   },
   {
@@ -334,7 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catalogue.write(\"{}/VISTA-VHS.fits\".format(OUT_DIR), overwrite=True)"
+    "catalogue.write(\"{}/VISTA-VHS_DR2.fits\".format(OUT_DIR), overwrite=True)"
    ]
   }
  ],
