--- a/dmu1/dmu1_ml_AKARI-SEP/2.2_Merging_DR2.ipynb
+++ b/dmu1/dmu1_ml_AKARI-SEP/2.2_Merging_DR2.ipynb
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vhs = Table.read(\"{}/VISTA-VHS.fits\".format(TMP_DIR))\n",
+    "vhs = Table.read(\"{}/VISTA-VHS_DR2.fits\".format(TMP_DIR))\n",
     "simes = Table.read(\"{}/SIMES_8.fits\".format(TMP_DIR))\n",
     "des = Table.read(\"{}/DES_DR2.fits\".format(TMP_DIR))"
    ]
