help id bug in final COSMOS merge

--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging_DR2.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging_DR2.ipynb
@@ -181,14 +181,14 @@
     "))\n",
     "xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
     "\n",
+    "xid_spire['HELP_ID'].name = 'help_id'\n",
     "xid_spire['help_id'] = xid_spire['help_id'].astype('S27')\n",
     "xid_spire['help_id'] = Column(np.char.strip(xid_spire['help_id']))\n",
     "\n",
     "xid_spire = xid_spire['help_id',\n",
     "                      'f_spire_250', 'ferr_spire_250',\n",
     "                      'f_spire_350', 'ferr_spire_350',\n",
-    "                      'f_spire_500', 'ferr_spire_500']\n",
-    "xid_spire['help_id'].name = 'help_id'"
+    "                      'f_spire_500', 'ferr_spire_500']\n"
    ]
   },
   {
