replace wirds with wircam

--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging_DR2.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging_DR2.ipynb
@@ -62,7 +62,14 @@
     "SUFFIX='20210120'\n",
     "ml = Table.read(\n",
     "    \"../../dmu1/dmu1_ml_COSMOS/data/dr2_master_catalogue_cosmos_{}.fits\".format(SUFFIX))\n",
-    "ml.meta = None"
+    "ml.meta = None\n",
+    "\n",
+    "#there appear to be wirds columns that should have been replaced with wircam\n",
+    "for c in ml.colnames:\n",
+    "    if '_wirds_k' in c:\n",
+    "        ml[c].name = c.replace('_wirds_k','_wircam_ks')\n",
+    "    if '_wirds_h' in c:\n",
+    "        ml[c].name = c.replace('_wirds_h','_wircam_h')"
    ]
   },
   {
