COSMOS2020 CIGALE prep

--- a/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation_dr2.ipynb
+++ b/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation_dr2.ipynb
@@ -63,8 +63,7 @@
     "good = {}\n",
     "for band in [#'pacs_green', 'pacs_red', \n",
     "             'spire_250', 'spire_350', 'spire_500']:\n",
-    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "                                   ~master_catalogue['flag_{}'.format(band)])\n",
+    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]))# &~master_catalogue['flag_{}'.format(band)])\n",
     "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
     "                              master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
    ]
