COSMOS2020 CIGALE prep

--- a/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation_dr2.ipynb
+++ b/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation_dr2.ipynb
@@ -296,7 +296,8 @@
    "outputs": [],
    "source": [
     "xid = {}\n",
-    "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
+    "for band in [#'pacs_green', 'pacs_red', \n",
+    "    'spire_250', 'spire_350', 'spire_500']:\n",
     "    xid[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
     "                                   ~master_catalogue['flag_{}'.format(band)])\n",
     "xid = np.sum(list(xid.values()), axis=0) >= 1"
