CIGLAE input notebook run

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/4_Selection_function.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/4_Selection_function.ipynb
@@ -116,9 +116,9 @@
     "TMP_DIR = os.environ.get('TMP_DIR', \"./data_tmp\")\n",
     "OUT_DIR = os.environ.get('OUT_DIR', \"./data\")\n",
     "SUFFIX = find_last_ml_suffix()\n",
-    "#SUFFIX = \"20171016\"\n",
+    "SUFFIX = \"20210513\"\n",
     "\n",
-    "master_catalogue_filename = \"ml_for_depths_herschel-stripe-82_{}.fits\".format( SUFFIX)\n",
+    "master_catalogue_filename = \"master_catalogue_herschel-stripe-82_{}.for_depths.fits\".format( SUFFIX)\n",
     "master_catalogue = Table.read(\"{}/{}\".format(OUT_DIR, master_catalogue_filename))\n",
     "\n",
     "print(\"Depth maps produced using: {}\".format(master_catalogue_filename))\n",
