--- a/dmu10/1.2.HELP_selection_function_HS-82.ipynb
+++ b/dmu10/1.2.HELP_selection_function_HS-82.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "DMU_DIR = '../'\n",
     "FIELD = 'Herschel-Stripe-82'\n",
-    "SUFFIX = datetime.today().strftime('%Y%m%d')"
+    "SUFFIX = '20210513' #datetime.today().strftime('%Y%m%d')"
    ]
   },
   {
@@ -438,8 +438,8 @@
    "outputs": [],
    "source": [
     "ldustfile = DMU_DIR + 'dmu28/dmu28_Herschel-Stripe-82/data/Ldust/old/herschel_stripe_82_Ldust_prediction_all.fits'\n",
-    "ldust_cat = Table.read(ldustfile, memmap=True)\n",
-    "ldust_cat['id'].name = 'help_id'"
+    "#ldust_cat = Table.read(ldustfile, memmap=True)\n",
+    "#ldust_cat['id'].name = 'help_id'"
    ]
   },
   {
@@ -451,25 +451,25 @@
    "outputs": [],
    "source": [
     "# indexs catalogues based on flags\n",
-    "ind_catalogue_ldustcriteria = (ind_catalogue['ndet_total']==3) | (ind_catalogue['ndet_total']==7)\n",
+    "#ind_catalogue_ldustcriteria = (ind_catalogue['ndet_total']==3) | (ind_catalogue['ndet_total']==7)\n",
     "# ind_catalogue_iraccriteria = ind_catalogue['ndet_total']>=5\n",
     "\n",
     "\n",
     "# Compare sources after selection criteria with ldust catalogue \n",
     "# Plotting Venn diagrams \n",
     "#########################################\n",
-    "ind_catalogues = np.array([\n",
-    "    ind_catalogue_ldustcriteria,\n",
+    "#ind_catalogues = np.array([\n",
+    "#    ind_catalogue_ldustcriteria,\n",
     "#     ind_catalogue_iraccriteria\n",
-    "    ])\n",
+    "#    ])\n",
     "\n",
-    "ind_names =  np.array([\n",
-    "    '_ldustcriteria_{}'.format(SUFFIX),\n",
+    "#ind_names =  np.array([\n",
+    "#    '_ldustcriteria_{}'.format(SUFFIX),\n",
     "#     cat_name+'_iraccriteria'\n",
-    "])\n",
+    "#])\n",
     "\n",
     "# Venn Diagrams\n",
-    "compare_cats_venndiagram(ldust_cat['help_id'], ind_catalogue['help_id'], ind_catalogues, ind_names, 'ldust', 'sf')\n"
+    "#compare_cats_venndiagram(ldust_cat['help_id'], ind_catalogue['help_id'], ind_catalogues, ind_names, 'ldust', 'sf')\n"
    ]
   },
   {
