--- a/dmu1/dmu1_ml_AKARI-SEP/2.2_Merging_DR2.ipynb
+++ b/dmu1/dmu1_ml_AKARI-SEP/2.2_Merging_DR2.ipynb
@@ -576,7 +576,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simes_moc = MOC(filename=\"../../dmu0/dmu0_SIMES/data/SEP_catalog8.0_mjy_MOC.fits\")\n",
+    "simes_moc = MOC(filename=\"../../dmu0/dmu0_SIMES/data/SEP_catalog8.0_mJy_MOC.fits\")\n",
     "vhs_moc = MOC(filename=\"../../dmu0/dmu0_VISTA-VHS/data/VHS_AKARI-SEP_MOC.fits\")\n",
     "des_moc = MOC(filename=\"../../dmu0/dmu0_DES/data/des-dr2-adfs_MOC.fits\")"
    ]
@@ -722,7 +722,7 @@
    "outputs": [],
    "source": [
     "master_catalogue[id_names].write(\n",
-    "    \"{}/master_list_cross_ident_akari-sep{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
+    "    \"{}/master_list_cross_ident_akari-sep_dr2{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
     "id_names.remove('help_id')\n",
     "master_catalogue.remove_columns(id_names)"
    ]
@@ -799,7 +799,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "master_catalogue[columns].write(\"{}/master_catalogue_akari-sep_dr2{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
+    "master_catalogue.write(\"{}/master_catalogue_akari-sep_dr2{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
    ]
   },
   {
